# NonBDNAFinder

./: .gitignore  BADGE_TABS_GUIDE.md  BADGE_TABS_IMPLEMENTATION.md  BADGE_TABS_README.md  BATCH_ANALYSIS_README.md  BENCHMARKING_COMPARISON.md  BENCHMARK_EXECUTIVE_SUMMARY.md  BENCHMARK_PROJECT_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHUNKING_AND_PARALLEL_IMPLEMENTATION.md  CODE_REFACTORING_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION.md  CONSOLIDATION_GUIDE.md  Comparative_Genomics_Analysis.ipynb  Comparative_Genomics_Analysis_Writeup.md  Comparative_NonBDNA_Analysis_Tables.xlsx  DENSITY_ANALYSIS_GUIDE.md  DEPLOYMENT_FIX.md  DEPLOYMENT_INSTRUCTIONS.md  DEPRECATED_FILES_REMOVAL_SUMMARY.md  DETECTORS_REFACTORING_SUMMARY.md  DETECTOR_NORMALIZATION_ARCHITECTURE.md  DETECTOR_REFERENCE.md  DEVELOPER_GUIDE.md  DISCORD_WEBHOOK_GUIDE.md  DISCORD_WEBHOOK_IMPLEMENTATION.md  DISK_STORAGE_ARCHITECTURE.md  DOCUMENTATION.md  Dockerfile  EGZ_IMPLEMENTATION.md  ENHANCED_APHILIC_IMPLEMENTATION.md  ENHANCED_APHILIC_README.md  ENHANCED_FEATURES_EXAMPLES.md  ENHANCEMENT_SUMMARY.md  EXCEL_IMPLEMENTATION_SUMMARY.md  EXCEL_PATTERN_GUIDE.md  EXCEL_TEST_RESULTS.txt  FINAL_SUMMARY.md  FIX_IMPORT_ERROR_SUMMARY.md  (+241 more)
.streamlit/: config.toml
Archive/: HYPERSCAN_STREAMLIT_GUIDE.md  PRODUCTION_HYPERSCAN_README.md  app_streamlit_old.py  final_validation.py  integration_example.py  validate_scientific_accuracy.py
Archives/: IMPLEMENTATION_SUMMARY.md  README_stringent_aphilic.md  example_tetra_propensities.csv  example_tri_propensities.csv  optimize_performance.py  test_aphilic_integration.py  test_app_integration.py  test_app_integration_aphilic.py  test_core_requirements.py  test_egz_motif.py  test_enhanced_aphilic.py  validate_reorganization.py
BASE_CODES/: README.md  enhanced_cache.py  export_utils.py  viz_tools.py
Buchnera aphidicola_genome/: comprehensive_genome_stats.csv  motifs.xlsx
Candidatus Carsonella ruddii_genome/: comprehensive_genome_stats.csv  motifs.xlsx
Cellulomonas shaoxiangyii_genome/: comprehensive_genome_stats.csv
Detectors/: __init__.py
Escherichia coli_genome/: comprehensive_genome_stats.csv  motifs.xlsx
Genomes/: BATCH_ANALYSIS_WRITEUP.md  RESULTS_QUICK_REFERENCE.md
HYPERSCAN/: README.md  hs_registry_manager.py  hyperscan_integration.py
Helicobacter pylori_genome/: comprehensive_genome_stats.csv  motifs.xlsx
Miltoncostaea marina_genome/: comprehensive_genome_stats.csv
NBSTVALIDATION/: 693fc40d26a53.fasta  693fc40d26a53_Z.tsv  README.md  VALIDATION_REPORT.md  __init__.py  create_figures.py  create_publication_figures.py  extend_report.py  run_genome_validation.py  subclass_comparison_summary.tsv  table1_comparison_metrics.csv  table2_class_distribution.csv  validation_analysis_subclass.py
NONHYPERSCAN/: README.md  all_motifs_refactored.py  motif_detectors.py  orchestrator.py  overlap_resolution.py
REGISTRIES/: README.md
SCORINGS/: README.md  conservation_analysis.py
SMID/: __init__.py  clustering.py  dispatcher.py  seed_database.py  seed_engine.py
Saccharomyces cerevisiae_genome/: comprehensive_genome_stats.csv
Staphylococcus aureus_genome/: comprehensive_genome_stats.csv  motifs.xlsx
Streptococcus pneumoniae_genome/: comprehensive_genome_stats.csv  motifs.xlsx
UI/: __init__.py  cache.py  css.py  documentation.py  download.py  formatters.py  guards.py  headers.py  home.py  performance_stats.py  results.py  storage_helpers.py  styles.css  system.py  theme.css  upload.py  visitor_tracker.py
Utilities/: __init__.py  ac_matcher.py  adaptive_chunk_planner.py  chunk_analyzer.py  chunk_generator.py  consolidated_registry.json  detector_runner.py  detectors_utils.py  disk_chunk_manager.py  disk_storage.py  final_exporter.py  genome_worker.py  job_manager.py  motif_detection_engine.py  multifasta_engine.py  multifasta_visualizer.py  nonbscanner.py  nonbscanner_optimized.py  overlap_deduplicator.py  parallel_analysis_helper.py  safety.py  scanner_agent.py  sequence_preprocessor.py  streamlit_progress.py  streamlit_safe_executor.py  system_resource_inspector.py  triple_chunk_analyzer.py  utilities.py  visualization_accumulator.py  visualization_pipeline.py
_master/: 1_global_class_distribution.csv  2_per_file_summary.csv  3_class_statistics.csv  4_file_class_pivot.csv  5_subclass_statistics.csv  6_class_density_pivot.csv  7_class_coverage_pivot.csv  New Text Document (2).txt  global_comprehensive_genome_stats.csv  master_class_aggregate.csv  master_class_statistics.csv  master_comparison.csv  master_subclass_aggregate.csv  master_subclass_statistics.csv
archive/: README.md  SLIPPED_DNA_REFINEMENTS.md  VALIDATION_REPORT.md  optimized_scoring_and_pipeline.py  test_performance.py  validate_improvements.py  visualization_enhancements.py
archives/: README.md  code_quality_improvements.py
batch_results/: Buchnera_aphidicola_motifs.json  Candidatus_Carsonella_ruddii_motifs.json  Streptococcus_pneumoniae_motifs.json  batch_summary.json  saureus_motifs.json
benchmarks/: benchmark_hyperscan.py
cli/: __init__.py  nbdscanner_cli.py
comparative_results/: comparative_analysis.json  comparative_report.txt
config/: analysis.py  colors.py  export.py  layout.py  motif_taxonomy.py  text.py  themes.py  typography.py  visualization.py
core/: motif_normalizer.py
detectors/: __init__.py
docs/: CHUNKING_FIX.md  DOCUMENTATION.md  PARALLEL_PROCESSING.md  PUBLICATION_FIGURES_GUIDE.md  PUBLICATION_FIGURES_QUICKSTART.md  PUBLICATION_LEVEL_INTERFACE.md  SEQUENCE_PREPROCESSING.md  SUBCLASS_DETECTION_REPORT.md  VISUALIZATION_IMPROVEMENTS.md  perf_runbook.md
engine/: __init__.py  detection.py
examples/: 693fc40d26a53_writeup.txt  (+2 more)
ui/: cache.py  (+6 more)
(+233 files in other folders)
